--- a/ch9/pr1/base_line.ipynb
+++ b/ch9/pr1/base_line.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4  15.01.2013    0    25   2555  1099.00  1.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "4   4     5  5268"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -253,6 +253,595 @@
     "all_df = [sales_train, shops, items, item_categories, test]\n",
     "for df in all_df:\n",
     "    df = downcast(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>월ID</th>\n",
+       "      <th>상점ID</th>\n",
+       "      <th>상품ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>22154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913845</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913846</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913847</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913848</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913849</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7440</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10913850 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          월ID  상점ID   상품ID\n",
+       "0           0    59  22154\n",
+       "1           0    59   2552\n",
+       "2           0    59   2554\n",
+       "3           0    59   2555\n",
+       "4           0    59   2564\n",
+       "...       ...   ...    ...\n",
+       "10913845   33    21   7635\n",
+       "10913846   33    21   7638\n",
+       "10913847   33    21   7640\n",
+       "10913848   33    21   7632\n",
+       "10913849   33    21   7440\n",
+       "\n",
+       "[10913850 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "train = []\n",
+    "\n",
+    "for i in sales_train['월ID'].unique():\n",
+    "    all_shop = sales_train.loc[sales_train['월ID']==i, '상점ID'].unique()\n",
+    "    all_item = sales_train.loc[sales_train['월ID']==i, '상품ID'].unique()\n",
+    "    train.append(np.array(list(product([i],all_shop,all_item))))\n",
+    "\n",
+    "idx_features = ['월ID', '상점ID', '상품ID']\n",
+    "\n",
+    "train = pd.DataFrame(np.vstack(train), columns = idx_features)\n",
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>월ID</th>\n",
+       "      <th>상점ID</th>\n",
+       "      <th>상품ID</th>\n",
+       "      <th>월간 판매량</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1609119</th>\n",
+       "      <td>33</td>\n",
+       "      <td>59</td>\n",
+       "      <td>22087</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1609120</th>\n",
+       "      <td>33</td>\n",
+       "      <td>59</td>\n",
+       "      <td>22088</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1609121</th>\n",
+       "      <td>33</td>\n",
+       "      <td>59</td>\n",
+       "      <td>22091</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1609122</th>\n",
+       "      <td>33</td>\n",
+       "      <td>59</td>\n",
+       "      <td>22100</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1609123</th>\n",
+       "      <td>33</td>\n",
+       "      <td>59</td>\n",
+       "      <td>22102</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1609124 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         월ID  상점ID   상품ID  월간 판매량\n",
+       "0          0     0     32       6\n",
+       "1          0     0     33       3\n",
+       "2          0     0     35       1\n",
+       "3          0     0     43       1\n",
+       "4          0     0     51       2\n",
+       "...      ...   ...    ...     ...\n",
+       "1609119   33    59  22087       6\n",
+       "1609120   33    59  22088       2\n",
+       "1609121   33    59  22091       1\n",
+       "1609122   33    59  22100       1\n",
+       "1609123   33    59  22102       1\n",
+       "\n",
+       "[1609124 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group = sales_train.groupby(idx_features).agg({'판매량':'sum'})\n",
+    "group = group.reset_index()\n",
+    "\n",
+    "group = group.rename(columns = {'판매량':'월간 판매량'})\n",
+    "group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>월ID</th>\n",
+       "      <th>상점ID</th>\n",
+       "      <th>상품ID</th>\n",
+       "      <th>월간 판매량</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>22154</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2552</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2554</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2555</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2564</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913845</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7635</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913846</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7638</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913847</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7640</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913848</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7632</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913849</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7440</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10913850 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          월ID  상점ID   상품ID  월간 판매량\n",
+       "0           0    59  22154     1.0\n",
+       "1           0    59   2552     NaN\n",
+       "2           0    59   2554     NaN\n",
+       "3           0    59   2555     NaN\n",
+       "4           0    59   2564     NaN\n",
+       "...       ...   ...    ...     ...\n",
+       "10913845   33    21   7635     NaN\n",
+       "10913846   33    21   7638     NaN\n",
+       "10913847   33    21   7640     NaN\n",
+       "10913848   33    21   7632     NaN\n",
+       "10913849   33    21   7440     NaN\n",
+       "\n",
+       "[10913850 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train = train.merge(group, on=idx_features, how='left')\n",
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['월ID'] = 34"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_data = pd.concat([train, test.drop('ID',axis = 1)],\n",
+    "                     ignore_index = True, keys = idx_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>월ID</th>\n",
+       "      <th>상점ID</th>\n",
+       "      <th>상품ID</th>\n",
+       "      <th>월간 판매량</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>22154</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2552</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2554</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2555</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2564</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11128045</th>\n",
+       "      <td>34</td>\n",
+       "      <td>45</td>\n",
+       "      <td>18454</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11128046</th>\n",
+       "      <td>34</td>\n",
+       "      <td>45</td>\n",
+       "      <td>16188</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11128047</th>\n",
+       "      <td>34</td>\n",
+       "      <td>45</td>\n",
+       "      <td>15757</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11128048</th>\n",
+       "      <td>34</td>\n",
+       "      <td>45</td>\n",
+       "      <td>19648</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11128049</th>\n",
+       "      <td>34</td>\n",
+       "      <td>45</td>\n",
+       "      <td>969</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11128050 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          월ID  상점ID   상품ID  월간 판매량\n",
+       "0           0    59  22154     1.0\n",
+       "1           0    59   2552     0.0\n",
+       "2           0    59   2554     0.0\n",
+       "3           0    59   2555     0.0\n",
+       "4           0    59   2564     0.0\n",
+       "...       ...   ...    ...     ...\n",
+       "11128045   34    45  18454     0.0\n",
+       "11128046   34    45  16188     0.0\n",
+       "11128047   34    45  15757     0.0\n",
+       "11128048   34    45  19648     0.0\n",
+       "11128049   34    45    969     0.0\n",
+       "\n",
+       "[11128050 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_data = all_data.fillna(0)\n",
+    "all_data"
    ]
   },
   {
