--- a/ch9/pr2/base_line.ipynb
+++ b/ch9/pr2/base_line.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62.5% 압축됨\n",
+      "38.6% 압축됨\n",
+      "54.2% 압축됨\n",
+      "39.9% 압축됨\n",
+      "70.8% 압축됨\n"
+     ]
+    }
+   ],
    "source": [
     "all_df = [sales_train, shops, items, item_categories, test]\n",
     "for df in all_df:\n",
@@ -79,9 +91,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>월ID</th>\n",
+       "      <th>상점ID</th>\n",
+       "      <th>상품ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>22154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>2564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913845</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913846</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913847</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913848</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10913849</th>\n",
+       "      <td>33</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7440</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10913850 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          월ID  상점ID   상품ID\n",
+       "0           0    59  22154\n",
+       "1           0    59   2552\n",
+       "2           0    59   2554\n",
+       "3           0    59   2555\n",
+       "4           0    59   2564\n",
+       "...       ...   ...    ...\n",
+       "10913845   33    21   7635\n",
+       "10913846   33    21   7638\n",
+       "10913847   33    21   7640\n",
+       "10913848   33    21   7632\n",
+       "10913849   33    21   7440\n",
+       "\n",
+       "[10913850 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from itertools import product\n",
     "\n",
@@ -123,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
