--- a/ch6/pr2/improve.ipynb
+++ b/ch6/pr2/improve.ipynb
@@ -2,15 +2,454 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import Ridge\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn import metrics\n",
+    "import pandas as pd\n",
     "\n",
-    "ridge_model = Ridge()"
+    "data_path = \"../data/\"\n",
+    "\n",
+    "train = pd.read_csv(data_path + 'train.csv')\n",
+    "test = pd.read_csv(data_path+'test.csv')\n",
+    "submission = pd.read_csv(data_path+ 'sampleSubmission.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = train[train['weather'] != 4]\n",
+    "\n",
+    "all_data = pd.concat([train,test], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>season</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>workingday</th>\n",
+       "      <th>weather</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>atemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>casual</th>\n",
+       "      <th>registered</th>\n",
+       "      <th>count</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>minute</th>\n",
+       "      <th>second</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011-01-01 00:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2011-01-01 01:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.02</td>\n",
+       "      <td>13.635</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2011-01-01 02:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.02</td>\n",
+       "      <td>13.635</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011-01-01 03:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2011-01-01 04:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             datetime  season  holiday  workingday  weather  temp   atemp  \\\n",
+       "0 2011-01-01 00:00:00       1        0           0        1  9.84  14.395   \n",
+       "1 2011-01-01 01:00:00       1        0           0        1  9.02  13.635   \n",
+       "2 2011-01-01 02:00:00       1        0           0        1  9.02  13.635   \n",
+       "3 2011-01-01 03:00:00       1        0           0        1  9.84  14.395   \n",
+       "4 2011-01-01 04:00:00       1        0           0        1  9.84  14.395   \n",
+       "\n",
+       "   humidity  windspeed  casual  registered  count  year  month  day  hour  \\\n",
+       "0        81        0.0     3.0        13.0   16.0  2011      1    1     0   \n",
+       "1        80        0.0     8.0        32.0   40.0  2011      1    1     1   \n",
+       "2        80        0.0     5.0        27.0   32.0  2011      1    1     2   \n",
+       "3        75        0.0     3.0        10.0   13.0  2011      1    1     3   \n",
+       "4        75        0.0     0.0         1.0    1.0  2011      1    1     4   \n",
+       "\n",
+       "   minute  second  weekday  \n",
+       "0       0       0        5  \n",
+       "1       0       0        5  \n",
+       "2       0       0        5  \n",
+       "3       0       0        5  \n",
+       "4       0       0        5  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_data['datetime'] = pd.to_datetime(all_data['datetime'])\n",
+    "\n",
+    "all_data['year'] = all_data['datetime'].dt.year\n",
+    "all_data['month'] = all_data['datetime'].dt.month\n",
+    "all_data['day'] = all_data['datetime'].dt.day\n",
+    "all_data['hour'] = all_data['datetime'].dt.hour\n",
+    "all_data['minute'] = all_data['datetime'].dt.minute\n",
+    "all_data['second'] = all_data['datetime'].dt.second\n",
+    "all_data['weekday'] = all_data['datetime'].dt.weekday\n",
+    "all_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_features = ['casual', 'registered', 'datetime','month','windspeed']\n",
+    "all_data = all_data.drop(drop_features, axis =1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = all_data[~pd.isnull(all_data['count'])].drop(['count'],axis=1)\n",
+    "X_test = all_data[pd.isnull(all_data['count'])].drop(['count'],axis=1)\n",
+    "\n",
+    "y=train['count']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def rmsle(y_true, y_pred, convertExp=True):\n",
+    "    if convertExp:\n",
+    "        y_true = np.exp(y_true)\n",
+    "        y_pred = np.exp(y_pred)\n",
+    "\n",
+    "    log_true = np.nan_to_num(np.log(y_true+1))\n",
+    "    log_pred = np.nan_to_num(np.log(y_pred+1))\n",
+    "\n",
+    "    output = np.sqrt(np.mean((log_true - log_pred)**2))\n",
+    "    return output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV    #하이퍼 파라미터 확인해주는 함수\n",
+    "from sklearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "릿지"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "make_scorer(rmsle, greater_is_better=False)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Ridge\n",
+    "ridge_model = Ridge()\n",
+    "\n",
+    "# max_iter: 최대 반복 횟수,  \n",
+    "ridge_params = {'max_iter': [3000], 'alpha': [0.1,1,2,3,4,10,30,100,200,300,400,800,900,1000]}\n",
+    "\n",
+    "rmsle_score = metrics.make_scorer(rmsle, greater_is_better=False)\n",
+    "rmsle_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gridsearch_ridge_model = GridSearchCV(estimator = ridge_model,\n",
+    "                                      param_grid=ridge_params,\n",
+    "                                      scoring = rmsle_score,\n",
+    "                                      cv = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'릿지 회귀 RMSLE 값 : 1.0203'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_y = np.log(y)\n",
+    "gridsearch_ridge_model.fit(X_train, log_y)\n",
+    "\n",
+    "preds = gridsearch_ridge_model.best_estimator_.predict(X_train)\n",
+    "\n",
+    "f'릿지 회귀 RMSLE 값 : {rmsle(log_y, preds, True):.4f}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "라쏘"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'라쏘 회귀 RMSLE 갑: 1.0203'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Lasso\n",
+    "\n",
+    "lasso_model = Lasso()\n",
+    "\n",
+    "lasso_alpha = 1/np.array([0.1,1,2,3,4,10,30,100,200,300,400,800,900,1000])\n",
+    "lasso_params = {'max_iter': [3000], 'alpha': lasso_alpha}\n",
+    "\n",
+    "gridsearch_lasso_model = GridSearchCV(estimator = lasso_model,\n",
+    "                                      param_grid = lasso_params,\n",
+    "                                      scoring = rmsle_score,\n",
+    "                                      cv = 5)\n",
+    "\n",
+    "log_y = np.log(y)\n",
+    "gridsearch_lasso_model.fit(X_train, log_y)\n",
+    "\n",
+    "preds = gridsearch_lasso_model.best_estimator_.predict(X_train)\n",
+    "f'라쏘 회귀 RMSLE 갑: {rmsle(log_y, preds, True):.4f}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "랜덤포레스트 회귀 모델"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestRegressor(),\n",
+       "             param_grid={'n_estimators': [100, 120, 140], 'random_state': [42]},\n",
+       "             scoring=make_scorer(rmsle, greater_is_better=False))"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "randomforest_model = RandomForestRegressor()\n",
+    "rf_params = {'random_state':[42], 'n_estimators': [100,120,140]}\n",
+    "gridsearch_random_forest_model = GridSearchCV(estimator = randomforest_model, param_grid = rf_params,\n",
+    "                                              scoring=rmsle_score, cv = 5)\n",
+    "log_y = np.log(y)\n",
+    "gridsearch_random_forest_model.fit(X_train,log_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'랜덤 포레스트 회귀 RMSLE 값 : 0.1101'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds = gridsearch_random_forest_model.best_estimator_.predict(X_train)\n",
+    "f'랜덤 포레스트 회귀 RMSLE 값 : {rmsle(log_y, preds, True):.4f}'"
    ]
   },
   {
